# warptempo_gui_x11_archive

./: .gitignore  CMakeLists.txt  README.md  RENDER_PATH.md  audioengineering.txt  basetemposcale  color_dialog_inventory.md  iterate  parser  parser.cpp  rms_splitter  rms_splitter.cpp  sorttransients  trimmidi  warptempo  warptempo_basetemposcale  warptempo_flatten  warptempo_iterate  warptempo_removetrimpoints  warptempo_renderas
adapters/ableton/: ableton_adapter  ableton_adapter.cpp  ableton_adapter~.sh
adapters/bungee/: CMakeLists.txt  main.cpp
adapters/midi/: CMakeLists.txt  main.cpp  midi_adapter  midi_adapter.cpp
adapters/soundtouch/: CMakeLists.txt  main.cpp
adapters/stretch/: CMakeLists.txt  main.cpp
assets/: playhead-cursor.xcf
data/: eq_test_suite.tsv
docs/: soundtouch_implementation.md
eqmatch/: CMakeLists.txt  main.cpp
examples/550 - 1/: .midi.mid  .notes  .settings  .warpmarkers  master_002.RPP  master_003.RPP  master_004.RPP  master_011.RPP  master_049.RPP  master_058.RPP  master_063.RPP  master_064.RPP  master_066.RPP  master_067.RPP  master_068.RPP  master_070.RPP  master_071.RPP  master_080.RPP  master_081.RPP  master_084.RPP  master_085.RPP  master_092.RPP  master_115.RPP
examples/550 - 2/: .midi.mid  .notes  .settings  .warpmarkers
examples/550 - 3/: .notes  .settings  .warpmarkers
examples/Mozart - Symphony No. 40 in G Minor (K. 550) - I. Molto Allegro (2024 Remaster, Tempo Warp)/: .settings  .warpmarkers
examples/Mozart - Symphony No. 40 in G Minor (K. 550) - I. Molto allegro (2024 Remaster, Tempo Warp)/: .midi.mid  .notes  .settings  .warpmarkers  master.RPP  master_001.RPP  master_002.als  master_003.RPP  master_003.als  master_004.RPP  master_004.als  master_007.RPP  master_008.RPP  master_009_revert_fixsidechain.RPP  master_013.RPP  master_014.RPP  master_017_glue.RPP  master_018_ott_008.RPP  master_019_midside_011.RPP  master_019_midside_012.RPP  master_019_midside_013.RPP  master_019_midside_017.RPP  master_020.RPP  master_021.RPP  master_022.RPP  master_023.RPP  master_025.RPP  master_026.RPP  master_027.RPP  master_028.RPP  master_029.RPP  master_030.RPP  master_031.RPP  master_032.RPP  master_033.RPP  master_035.RPP  master_036.RPP  master_037.RPP  master_039.RPP  master_042.RPP  (+32 more)
examples/Mozart - Symphony No. 40 in G Minor (K. 550) - II. Andante (2024 Remaster, Tempo Warp)/: .midi.mid  .notes  .settings  .warpmarkers  master.RPP  master_001.RPP  master_003.RPP  master_004.RPP  master_007.RPP  master_008.RPP  master_025.RPP  master_028.RPP
examples/Mozart - Symphony No. 40 in G Minor (K. 550) - III. Menuetto. Allegretto (2024 Remaster, Tempo Warp)/: .midi.mid  .notes  .settings  .warpmarkers
examples/Mozart - Symphony No. 41 in C Major (K. 551) - I. Allegro vivace (2024 Remaster, Tempo Warp)/: .notes  .settings  .warpmarkers
examples/WIP Mozart - Symphony No. 40 in G Minor (K. 550) - I. Molto allegro (2024 Remaster, Tempo Warp)/: .settings  .warpmarkers
examples/WIP Mozart - Symphony No. 40 in G Minor (K. 550) - II. Andante (2024 Remaster, Tempo Warp)/: .notes  .settings  .warpmarkers
examples/WIP Mozart - Symphony No. 40 in G Minor (K. 550) - III. Menuetto. Allegretto (2024 Remaster, Tempo Warp)/: .notes  .settings  .warpmarkers
plugins/: Stereo Level Automation  Stereo Width Toggle  guiclipper
presets/: pro-l2.ffp
src/: dynamics_lr4.cpp  dynamics_lr4.h  eq_analysis.cpp  eq_matcher.cpp  eq_matcher.h  eq_test_suite.cpp  gui_audio.cpp  gui_audio.h  gui_main.cpp  gui_markers.cpp  gui_markers.h  gui_playback.cpp  gui_playback.h  gui_render.cpp  gui_render.h  gui_render_pipeline.cpp  gui_render_pipeline.h  gui_text_display.cpp  gui_text_display.h  gui_text_editor.cpp  gui_text_editor.h  gui_transients.cpp  gui_transients.h  gui_x11.cpp  gui_x11.h  hpss.cpp  hpss.h  limiter.cpp  main.cpp  parser.cpp  phase_vocoder.cpp  playhead_cursor_data.h  stft_container.h  synthesis.cpp  synthesis.h  timemap.cpp  timemap.h  transient_apply.cpp  transient_apply.h  transients.cpp  (+4 more)
src/engine/: engine.cpp  engine.h  limiter.cpp  limiter.h  phase_vocoder.cpp  phase_vocoder.h  stft_container.h  synthesis.cpp  synthesis.h  transients.cpp
src/gui/: app_state.cpp  app_state.h  audio.cpp  audio.h  flag_editor.cpp  flag_editor.h  gui_input.h  input_handler.cpp  input_handler.h  main.cpp  miniaudio_impl.cpp  paint_handler.cpp  paint_handler.h  phase_reset_clipboard.h  phase_reset_markers.cpp  phase_reset_markers.h  phase_reset_markers_ops.cpp  phase_reset_markers_ops.h  phase_reset_propagate.cpp  phase_reset_propagate.h  platform.h  platform_wayland.cpp  platform_wayland.h  platform_x11.cpp  platform_x11.h  playback.cpp  playback.h  playhead_cursor_data.h  render.cpp  render.h  render_pipeline.cpp  render_pipeline.h  render_view.cpp  render_view.h  selection.cpp  selection.h  tab_mode.cpp  tab_mode.h  text_display.cpp  text_display.h  (+24 more)
warptempo_abletonadapter/.ableton Project/: .ableton.als
warptempo_bungeeadapter/: CMakeLists.txt  main.cpp  main.cpp~
warptempo_stretchadapter/: CMakeLists.txt  main.cpp
warptempo_vstpreset/: warptempo_pro-l2.vstpreset
warptempo_vstpresets/: warptempo_crossover.vstpreset
